--- a/docs/issue.adoc
+++ b/docs/issue.adoc
@@ -1,5 +1,7 @@
 :page-title: Issue Information
 :page-description: Extends JUnit Jupiter with `@Issue` to publish issue information.
+:xp-demo-dir: ../src/demo/java
+:demo: {xp-demo-dir}/org/junitpioneer/jupiter/IssueExtensionDemo.java
 
 == Introduction
 
@@ -21,13 +23,9 @@ Then there is an API interface to further process the results, so users can plug
 
 To show that a test relates to an issue just add the annotation and provide a value, e.g. a Jira issue id, like in the following example:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Issue("REQ-123")
-@Test
-void test() {
-	// One of the tests for the issue with the id "REQ-123"
-}
+include::{demo}[tag=issue_simple]
 ----
 
 The `@Issue` annotation can be used on the class and method level.
@@ -46,19 +44,9 @@ To use the information published this way, https://docs.oracle.com/javase/8/docs
 
 The following snippet shows a simple implementation of the interface that just prints out the `issueID` of received values:
 
-[source,java]
+[source,java,indent=0]
 ----
-public class SimpleProcessor implements IssueProcessor {
-
-	@Override
-	public void processTestResults(
-			List<IssueTestSuite> allResults) {
-		for(IssueTestSuite testSuite : allResults) {
-			System.out.println(testSuite.issueId());
-		}
-	}
-
-}
+include::{demo}[tag=issue_processor_sample]
 ----
 
 NOTE: The implementing class must be registered to the Java ecosystem as a service.
