--- a/docs/range-sources.adoc
+++ b/docs/range-sources.adoc
@@ -1,5 +1,7 @@
 :page-title: Range Sources
 :page-description: Extends JUnit Jupiter with `@IntRangeSource`, `@FloatRangeSource`, etc., which provide series of numbers as argument sources for parameterized tests.
+:xp-demo-dir: ../src/demo/java
+:demo: {xp-demo-dir}/org/junitpioneer/jupiter/params/RangeSourcesDemo.java
 
 The various range sources can be used to provide a series of numeric arguments with fixed differences between them (i.e., https://en.wikipedia.org/wiki/Arithmetic_progression[arithmetic progressions]) to a `@ParameterizedTest`.
 There is a range source for every corresponding numeric primitive type: `ByteRangeSource`, `ShortRangeSource`, `IntRangeSource`, `LongRangeSource`, `FloatRangeSource`, and `DoubleRangeSource`.
@@ -8,14 +10,9 @@ There is a range source for every corresponding numeric primitive type: `ByteRan
 
 In the basic use case, using any range source with just the `from` and `to` parameters will provide a series of numeric arguments with a difference of 1 between them, beginning at `from` ending at the last value smaller than `to` (i.e. _excluding_ `to`).
 
-[source,java]
+[source,java,indent=0]
 ----
-@ParameterizedTest
-@IntRangeSource(from = 0, to = 10)
-// called 10 times with `digit` = 0, 1, 2, 3, 4, 5, 6, 7, 8, 9
-void validDigit(int digit) {
-	System.out.println(digit + " is a valid digit");
-}
+include::{demo}[tag=rangesources_int_valid_digit]
 ----
 
 == Defining the step
@@ -23,15 +20,9 @@ void validDigit(int digit) {
 The `step` argument allows controlling the difference between the consecutive values.
 It can be positive or negative:
 
-[source,java]
+[source,java,indent=0]
 ----
-@ParameterizedTest
-@DoubleRangeSource(from = -0.1, to = -10, step = -0.1)
-void howColdIsIt(double d) {
-	System.out.println(d + " °C is cold");
-	System.out.println(d + " °F is REALY cold");
-	System.out.println(d + " K is too cold to be true");
-}
+include::{demo}[tag=rangesources_double_with_step]
 ----
 
 == Open and closed range sources
@@ -39,21 +30,9 @@ void howColdIsIt(double d) {
 By default, range sources represent ranges that are inclusive of the starting point (the `from` value), and exclusive of the end point (the `to` value).
 This behavior can be controlled by specifying the `closed` argument:
 
-[source,java]
+[source,java,indent=0]
 ----
-@ParameterizedTest
-@ByteRangeSource(from = 0, to = 0)
-void illegalRange(byte arg) {
-	// this will fail with an IllegalArgumentException
-	// since the range will be empty
-}
-
-@ParameterizedTest
-@LongRangeSource(from = 0L, to = 0L, closed = true)
-void legalRrange(long arg) {
-	// But this is fine
-	assertThat(arg).isEqualTo(0L);
-}
+include::{demo}[tag=rangesources_ranges]
 ----
 
 == Empty ranges
