--- a/docs/environment-variables.adoc
+++ b/docs/environment-variables.adoc
@@ -1,5 +1,7 @@
 :page-title: Clearing or Setting Environment Variables
 :page-description: Extends JUnit Jupiter with `@ClearEnvironmentVariable`, `@SetEnvironmentVariable`, which clear and set the values of environment variables
+:xp-demo-dir: ../src/demo/java
+:demo: {xp-demo-dir}/org/junitpioneer/jupiter/EnvironmentVariablesExtensionDemo.java
 
 The `@ClearEnvironmentVariable` and `@SetEnvironmentVariable` annotations can be used to clear, respectively, set the values of environment variables for a test execution.
 Both annotations work on the test method and class level, are repeatable, combinable, and inherited from higher-level containers.
@@ -13,63 +15,30 @@ For more details, see <<Warnings for Reflective Access>>.
 
 For example, clearing a environment variable for a test execution can be done as follows:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ClearEnvironmentVariable(key = "some variable")
-void test() {
-	assertThat(System.getenv("some variable")).isNull();
-}
+include::{demo}[tag=environment_clear_simple]
 ----
 
 And setting a environment variable for a test execution:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@SetEnvironmentVariable(
-	key = "some variable",
-	value = "new value")
-void test() {
-	assertThat(System.getenv("some variable")).
-		isEqualTo("new value");
-}
+include::{demo}[tag=environment_set_simple]
 ----
 
 As mentioned before, both annotations are repeatable and they can also be combined:
 
-[source,java]
+[source,java,indent=0]
 ----
-@Test
-@ClearEnvironmentVariable(key = "1st variable")
-@ClearEnvironmentVariable(key = "2nd variable")
-@SetEnvironmentVariable(
-	key = "3rd variable",
-	value = "new value")
-void test() {
-	assertThat(System.getenv("1st variable")).isNull();
-	assertThat(System.getenv("2nd variable")).isNull();
-	assertThat(System.getenv("3rd variable"))
-		.isEqualTo("new value");
-}
+include::{demo}[tag=environment_using_set_and_clear]
 ----
 
 Note that class level configurations are overwritten by method level configurations:
 
-[source,java]
+[source,java,indent=0]
 ----
-@ClearEnvironmentVariable(key = "some variable")
-class MyEnvironmentVariableTest {
-
-	@Test
-	@SetEnvironmentVariable(key = "some variable",
-			value = "new value")
-	void test() {
-		assertThat(System.getenv("some variable"))
-			.isEqualTo("new value");
-	}
-
-}
+include::{demo}[tag=environment_using_at_class_level]
 ----
 
 NOTE: Since v1.7.0, a class-level configuration means that the specified environment variables are cleared/set before and reset after each individual test in the annotated class.
